android: Fix invalid presentation timestamp.

According to the documentation [1], it is possible for
eglGetFrameTimestampsANDROID to succeed, and yet return in invalid
timestamp (as EGL_TIMESTAMP_INVALID_ANDROID). In such cases, the event
is not expected to happen again. Therefore, report the current-time as
the presentation-time.

[1] https://www.khronos.org/registry/EGL/extensions/ANDROID/EGL_ANDROID_get_frame_timestamps.txt

BUG=888721

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I05e586722bbcb8d05027ce3dddc4e9f845d11f32
Reviewed-on: https://chromium-review.googlesource.com/c/1272805
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Sadrul Chowdhury <sadrul@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598414}
Former-commit-id: 84a4df1c6bee3a5312e57877368b5828181bef8d